getActiveClients add summary planned income